# welder

./: CMakeLists.txt
data/: .~lock.welder panel.xls#  avrdude.conf  welder panel.xls
src/: CMakeLists.txt  main.cpp
src/lcd/: CMakeLists.txt  lcd.cpp  lcd.hpp
